[GCC] Fix build with gcc < 4.8.1, which does not have is_trivially_destructible https://bugs.webkit.org/show_bug.cgi?id=121999

Patch by Gustavo Noronha Silva <gns@gnome.org> on 2013-09-27
Reviewed by Benjamin Poulain.

* wtf/StdLibExtras.h:

Canonical link: https://commits.webkit.org/140030@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156529 268f45cc-cd09-0410-ab3c-d52691b4dbfc